--- a/contact.html
+++ b/contact.html
@@ -53,11 +53,11 @@
          <div class="container">
             <div class="social">
                <a href="https://www.facebook.com/" target="_blank">
-                  <img src="images/facebook.png" alt="facebook">
+                  <img src="images/facebook.png" alt="fb">
                </a>
                <div id="stroke"></div>
                <a href="https://www.youtube.com/" target="_blank">
-                  <img src="images/youtube.png" alt="youtube">
+                  <img src="images/youtube.png" alt="yt">
                </a>
             </div>
          </div>
