Add changes in Footer #2

--- a/index.html
+++ b/index.html
@@ -61,11 +61,11 @@
             <div class="wrapper">
                <div class="social">
                   <a href="https://www.facebook.com/" target="_blank">
-                     <img src="images/facebook.png" alt="facebook">
+                     <img src="images/Facebook.png" alt="facebook">
                   </a>
                   <div id="stroke"></div>
                   <a href="https://www.youtube.com/" target="_blank">
-                     <img src="images/youtube.png" alt="youtube">
+                     <img src="images/Youtube.png" alt="youtube">
                   </a>
                </div>
             </div>
