--- a/news.html
+++ b/news.html
@@ -87,11 +87,11 @@
          <div class="container">
             <div class="social">
                <a href="https://www.facebook.com/" target="_blank">
-               <img src="images/facebook.png" alt="facebook" target="_blank">
+               <img src="images/Facebook.png" alt="facebook" target="_blank">
                </a>
                <div id="stroke"></div>
                <a href="https://www.youtube.com/">
-               <img src="images/youtube.png" alt="youtube">
+               <img src="images/Youtube.png" alt="youtube">
                </a>
             </div>
          </div>
